--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Portfolio Webste - Romeo</title>
-    <link rel="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
 </head>
 
 <body>
