edited header to create navbar

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Portfolio Webste - Romeo</title>
+    <title>Personal Portfolio - Romeo</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
 </head>
 
 <body>
     
-    <header>
+    <header class="navbar">
         <h1>Romeo Dumlao</h1>
-        <ul>
-            <h2>About Me</h2>
-            <h2>Work</h2>
-            <h2>Contact Me</h2>
-            <h2>Resume</h2>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="#resume">Resume</a></li>
+            </ul>
+        </nav>
     </header>
     
-    <main>
         <div>
         <h1>About Me</h1>
             <p>This is about me</p>
@@ -57,7 +58,6 @@
              </div>
 
         </div>
-    </main>
 
     <footer>
         <h1>Contact Me</h1>
