deleted css and updated html

--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
             </div>
 
             <div class="project" >
-                <h2 a href="">Project 1</h2>
+                <h2>Project 1</h2>
                     <p>Description Project 1</p>
             </div>
            
 
             <div class="project" >
-                <h2 a href="">Project 2</h2>
+                <h2>Project 2</h2>
                 <p>Description Project 2</p>
             </div>    
                 
             <div class="project" >
-                <h2 a href="">Project 3</h2>
+                <h2>Project 3</h2>
                 <p>Description Project 3</p>
             </div>
 
             <div class="project" >
-                <h2 a href="https://romeocd.github.io/movie-database/">Movie Database</h2>
+                <h2>Project 4</h2>
                 <p>Description Project 4</p>
             </div>
 
