created addtional css styling

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
             </ul>
         </nav>
     </header>
-    
+        <section>
         <div id="aboutMe">
         <h1>About Me</h1>
             <p>This is about me</p>
         </div>
-        
+        </section>
+
+        <section>
         <div>
             <div id="work">
                 <h1>Work</h1>
@@ -52,7 +54,7 @@
             </div>
 
         </div>
-
+        </section>
     <footer>
         <h1>Contact Me</h1>
     </footer>
