update about me section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </nav>
     </header>
         <section>
-        <div id="aboutMe">
-        <h1>About Me</h1>
-            <p>This is about me</p>
-        </div>
+            <div id="aboutMe" class="about-section">
+                <h2>About Me</h2>
+                <img src="path_to_your_image.jpg" alt="Romeo Dumlao" class="profile-picture">
+                <p>Hello! I'm Romeo Dumlao...</p>
         </section>
 
         <section>
