--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <div id="aboutMe" class="about-section">
                 <h2>About Me</h2>
-                <img src="path_to_your_image.jpg" alt="Romeo Dumlao" class="profile-picture">
+
                 <p>Hello! I'm Romeo Dumlao...</p>
         </section>
 
@@ -33,8 +33,11 @@
             </div>
 
             <div class="project" >
-                <h2>Project 1</h2>
-                    <p>Description Project 1</p>
+                <h2><a href="https://github.com/romeocd/random-password-generator.git">Project 1: Random Password Generator</a></h2>
+                <p>Description: The random password generator was created to enable employees to generate random passwords based on criteria that they've selected.
+                    Usage: The application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript. It has a clean and polished, responsive user interface that adapts to multiple screen sizes. By clicking the button to generate a password, a series of prompts for password criteria appears. Length of the password must be at least 8 characters and no more than 128 characters. Character types to include in the password must be confirmed whether or not to include lowercase, uppercase, numeric, and/or special characters. After answering each prompt, the input should be validated and at least one character type should be selected. 
+                    After answering all prompts, a password is generated that matches the selected criteria and displayed in the page.
+                </p>
             </div>
            
 
