--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
             <div class="project" >
                 <h2><a href="https://github.com/romeocd/random-password-generator.git">Project 1: Random Password Generator</a></h2>
-                <p>Description: The random password generator was created to enable employees to generate random passwords based on criteria that they've selected.
-                    Usage: The application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript. It has a clean and polished, responsive user interface that adapts to multiple screen sizes. By clicking the button to generate a password, a series of prompts for password criteria appears. Length of the password must be at least 8 characters and no more than 128 characters. Character types to include in the password must be confirmed whether or not to include lowercase, uppercase, numeric, and/or special characters. After answering each prompt, the input should be validated and at least one character type should be selected. 
+                <p id="description">Description: The random password generator was created to enable employees to generate random passwords based on criteria that they've selected.
+                </p>
+                <p id="usage">Usage: The application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript. It has a clean and polished, responsive user interface that adapts to multiple screen sizes. By clicking the button to generate a password, a series of prompts for password criteria appears. Length of the password must be at least 8 characters and no more than 128 characters. Character types to include in the password must be confirmed whether or not to include lowercase, uppercase, numeric, and/or special characters. After answering each prompt, the input should be validated and at least one character type should be selected. 
                     After answering all prompts, a password is generated that matches the selected criteria and displayed in the page.
                 </p>
             </div>
