--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <p>Hello! I'm Romeo Dumlao...</p>
         </section>
 
-        <section>
+        <section id="work">
         <div>
-            <div id="work">
-                <h1>Work</h1>
+            <div>
+                <h1 id="project-title">Projects</h1>
             </div>
 
             <div class="project" >
