--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
            
 
             <div class="project" >
-                <h2>Project 2</h2>
-                <p>Description Project 2</p>
-            </div>    
+                <h2><a href="https://github.com/romeocd/coding-quiz">Project 2: Coding Quiz</a></h2>
+                <p id="description">Description: The coding quiz was created to take a timed quiz on JavaScript fundamentals that stores high scores. The app runs in the browser, and will feature dynamically updated HTML and CSS powered by JavaScript.
+                </p>
+                <p id="usage">Usage: When the coding quiz is opened, there is a start button that when clicked, questions are presented and timer starts to countdown. Upon answering a question, incorrect questions will subtract time from the clock and then the other questions are presented. When all questions are answered or timer is at 0, the game is over. When the game is over, you can save your initials and score.
+                </p>
+            </div> 
                 
             <div class="project" >
                 <h2>Project 3</h2>
