--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
             </div> 
                 
             <div class="project" >
-                <h2>Project 3</h2>
-                <p>Description Project 3</p>
+                <h2><a href="https://github.com/romeocd/note-taker">Project 3: Note Taker</a></h2>
+                <p id="description">Description: his application uses Express.js back end to save and retrieve note data from a JSON file.
+                    Installation
+                </p>
+                <p id="usage">Usage: When opening the note taker, click on the notes page to start taking notes. Click New Note to create a new note and then click the save button to save the note. All the saved notes will appear in the left hand column with other existing notes. To delete a note, click on the delete button/trashcan next to the note.
+                </p>
             </div>
 
             <div class="project" >
