added css for footer section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
            
 
-            <div class="project" >
+            <div class="project" id="project-1">
                 <h2><a href="https://github.com/romeocd/coding-quiz">Coding Quiz</a></h2>
                 <p id="description">Description: The coding quiz was created to take a timed quiz on JavaScript fundamentals that stores high scores. The app runs in the browser, and will feature dynamically updated HTML and CSS powered by JavaScript.
                 </p>
@@ -76,10 +76,10 @@
         </div>
         </section>
     <footer>
-        <h1 id="contact">Contact Me</h1>
-        <h2><a href="https://github.com/romeocd"></a>GitHub</h2>
+        <h1>Contact Me</h1>
+        <h2><a href="https://github.com/romeocd">GitHub</a></h2>
         <h2>Email: rdumlao07@gmail.com</h2>
-        <h2><a href="https://www.linkedin.com/in/romeo-dumlao-jr-59164216a/"></a>LinkedIn</h2>
+        <h2><a href="https://www.linkedin.com/in/romeo-dumlao-jr-59164216a/">LinkedIn</a></h2>
     </footer>
 </body>
 </html>
