updated more css

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         </section>
     <footer>
-        <h1>Contact Me</h1>
+        <h1 id="contact">Contact Me</h1>
         <h2><a href="https://github.com/romeocd">GitHub</a></h2>
         <h2>Email: rdumlao07@gmail.com</h2>
         <h2><a href="https://www.linkedin.com/in/romeo-dumlao-jr-59164216a/">LinkedIn</a></h2>
