--- a/index.html
+++ b/index.html
@@ -32,45 +32,42 @@
                 <h1 id="project-title">Projects</h1>
             </div>
 
-            <div class="project" >
+            <div class="project"  id="project-1">
                 <h2><a href="https://github.com/romeocd/random-password-generator.git">Random Password Generator</a></h2>
                 <p id="description">Description: The random password generator was created to enable employees to generate random passwords based on criteria that they've selected.
                 </p>
-                <p id="usage">Usage: The application runs in the browser and features dynamically updated HTML and CSS powered by JavaScript. It has a clean and polished, responsive user interface that adapts to multiple screen sizes. By clicking the button to generate a password, a series of prompts for password criteria appears. Length of the password must be at least 8 characters and no more than 128 characters. Character types to include in the password must be confirmed whether or not to include lowercase, uppercase, numeric, and/or special characters. After answering each prompt, the input should be validated and at least one character type should be selected. 
-                    After answering all prompts, a password is generated that matches the selected criteria and displayed in the page.
-                </p>
+                <a href="https://romeocd.github.io/random-password-generator/">
+                <img src="./assets/images/randompasswordgenerator.png" alt="Random Password Generator Screenshot">
+                </a>
             </div>
            
 
-            <div class="project" id="project-1">
+            <div class="project">
                 <h2><a href="https://github.com/romeocd/coding-quiz">Coding Quiz</a></h2>
                 <p id="description">Description: The coding quiz was created to take a timed quiz on JavaScript fundamentals that stores high scores. The app runs in the browser, and will feature dynamically updated HTML and CSS powered by JavaScript.
                 </p>
-                <p id="usage">Usage: When the coding quiz is opened, there is a start button that when clicked, questions are presented and timer starts to countdown. Upon answering a question, incorrect questions will subtract time from the clock and then the other questions are presented. When all questions are answered or timer is at 0, the game is over. When the game is over, you can save your initials and score.
-                </p>
+                <a href="https://romeocd.github.io/coding-quiz/">
+                <img src="./assets/images/codingquiz.png" alt="Coding Quiz Screenshot">
+                </a>
             </div> 
                 
             <div class="project" >
                 <h2><a href="https://github.com/romeocd/note-taker">Note Taker</a></h2>
                 <p id="description">Description: This application uses Express.js back end to save and retrieve note data from a JSON file.
                 </p>
-                <p id="usage">Usage: When opening the note taker, click on the notes page to start taking notes. Click New Note to create a new note and then click the save button to save the note. All the saved notes will appear in the left hand column with other existing notes. To delete a note, click on the delete button/trashcan next to the note.
-                </p>
+                <a href="https://note-taker-rd-eae559cb1f06.herokuapp.com/">
+                    <img src="./assets/images/codingquiz.png" alt="Note Taker Screenshot">
+                    </a>
             </div>
 
             <div class="project" >
                 <h2><a href="https://github.com/romeocd/employee-database">Employee Database</a></h2>
                 <p id="description">Description: This application manages a company's employee database using Node.js, Inquirer and MySQL while using the command line.
                 </p>
-                <p id="usage">Usage: Upon running "npm install" then "node index.js" in the terminal, the application will present the following options: view all departments, view all roles, view all employees, add a department, add a role, add an employee, and update employee role.
-                    <br>"View All Departments" will present a formatted table showing department names and department ids.
-                    <br>"View All Roles" will present the job title, role id, the department that the role belongs to, and the salary for that role.
-                    <br>"View All Employees" will present a formatted table showing employee data, including employee ids, first names, last names, job titles, departments, salaries, and managers that the employees report to.
-                    <br>"Add a Department" will allow you to enter the name of the department and that department is added to the database.
-                    <br>"Add a Role" will allow you to enter the name, salary, and department for the role and that role is added to the database.
-                    <br>"Add an Employee" will allow you to enter the employee’s first name, last name, role, and manager, and that employee is added to the database.
-                    <br>"Update an Employee Role" will allow you to select an employee to update and their new role and this information is updated in the database.
-                </p>
+                <a href="https://drive.google.com/file/d/1nmCpuoPBzJ7SFe63PRz7Y2l7rSF7YB5s/view">
+                    <img src="./assets/images/employeedatabase.png" alt="Employee Database Screenshot">
+                    </a>
+            </div>
             </div>
 
         </div>
