--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="https://github.com/romeocd">Resume</a></li>
             </ul>
         </nav>
     </header>
