updated about me section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="https://github.com/romeocd">Resume</a></li>
+                <li><a href="https://github.com/romeocd">GitHub</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,9 @@
             <div id="about" class="about-section">
                 <h2>About Me</h2>
                 <img src="./assets/images/profilepic.jpg" alt="Romeo Dumlao" class="profile-picture">
-                <p>Hello! I'm Romeo Dumlao...</p>
+                <p>Hello! I'm Romeo Dumlao and welcome to my personal portfolio! I am a beginner web developer and currently learning to be a Full Stack Web Developer under the Rutgers Coding Bootcamp program. 
+                    <br>Below are some of the projects completed so far. I will be making updates to this page as I learn and grow as a developer.
+                    <br>If you have any questions, please don't hesitate to contact me!  </p>
         </section>
 
         <section id="work">
